--- a/rwd2.css
+++ b/rwd2.css
@@ -4,7 +4,7 @@
 
 
 *{margin:0 !important;padding:0 !important;box-sizing:border-box;}
-body{display:grid;align-content:center;justify-content:center;background:yellow}
+body{display:grid;align-content:center;justify-content:center;background:lightyellow}
 
 
 
