--- a/welcome.css
+++ b/welcome.css
@@ -4,7 +4,7 @@
 
 
 *{margin:0;padding:0;box-sizing:border-box;}
-body{display:grid;align-content:center;justify-content:center;margin-top:-50px;background-color:whitesmoke}
+body{display:grid;align-content:center;justify-content:center;margin-top:-50px;background-color:azure}
 
 
 
